--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "naughty-button",
-  "version": "0.2.0",
+  "version": "0.2.1",
+  "repository": "https://github.com/WillCooter/naughty-button",
   "scripts": {
     "dev": "vite",
     "build": "vite build"
